[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/SDC/Resources/CertaFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/SDC/Scripts/CustomParamCell.gd" type="Script" id=2]

[node name="CharCell" type="HBoxContainer"]
margin_right = 390.0
margin_bottom = 29.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyText" type="LineEdit" parent="."]
margin_right = 177.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 0.964706, 1, 0.701961, 1 )
editable = false
placeholder_text = "id"
placeholder_alpha = 0.33

[node name="ValueText" type="LineEdit" parent="."]
margin_left = 181.0
margin_right = 359.0
margin_bottom = 29.0
size_flags_horizontal = 3
placeholder_text = "name"
placeholder_alpha = 0.33

[node name="DelBtn" type="Button" parent="."]
margin_left = 363.0
margin_right = 390.0
margin_bottom = 29.0
rect_min_size = Vector2( 27, 29 )
custom_fonts/font = ExtResource( 1 )
text = "X"

[connection signal="pressed" from="DelBtn" to="." method="_on_DelBtn_pressed"]
